--- a/src/index.html
+++ b/src/index.html
@@ -67,9 +67,9 @@
                 <div class="popup__content">
                     <h2 class="popup__title">Новое место</h2>
                     <form class="input input_element" name="form-input-element">
-                        <input type="text" placeholder="Название" class="input__text input__text_type_nameImg" value="" minlength="2" maxlength="30" id="nameImg" name="nameImg" required>
+                        <input type="text" placeholder="Название" class="input__text input__text_type_nameImg" value="" minlength="2" maxlength="30" id="nameImg" name="name" required>
                         <span id="nameImg-error" class="input__error"></span>
-                        <input type="url" placeholder="Ссылка на картинку" class="input__text input__text_type_img" value="" id="img" name="img" required>
+                        <input type="url" placeholder="Ссылка на картинку" class="input__text input__text_type_img" value="" id="img" name="link" required>
                         <span id="img-error" class="input__error"></span>
                         <button type="submit" class="input__save-btn">
                             Создать
